--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
 <h1>Reversi en Angular</h1>
-<pre>{{affichageBoard()}}</pre>
+<pre>{{affichageBoard()}}
+    {{currentPlayer()}}
+    Joue ta mère (comme eg '3,2')
+    <input type="text" [(ngModel)]="userInput"/>
+    <button (click)="affichageCoordonee()">play</button>
+
+</pre>
