lesson numéro 991 : don't use shortcuts => acc2++ -> no acc2 + 1 yes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,9 +18,9 @@
 </ul>
 
 <pre>
-    {{coupsPossibles().length}}
     {{winnerSig()}}
     score : {{scoresSig() | json}}
     {{testSignal()}}
+    gameStateAll : {{gameStateAll() | json}}
 </pre>
 
